Change authenication from basic to API key
